<resources>
    <string name="app_name">UU_ChecboxSnackbar</string>
    <string name="inputET">Поле ввода информации</string>
    <string name="outputTV">Поле вывода информации</string>
    <string name="saveBTN">Сохранить\nданные</string>
    <string name="clearBTN">Удалить\nданные</string>
    <string name="pddTV">Информация</string>
    <string name="pddDetailsTV">6.2. Круглые сигналы светофора имеют следующие значения:
        \nЗЕЛЕНЫЙ СИГНАЛ разрешает движение;
        \nЗЕЛЕНЫЙ МИГАЮЩИЙ СИГНАЛ разрешает движение и информирует, что время его действия истекает и вскоре будет включен запрещающий сигнал (для информирования водителей о времени в секундах, остающемся до конца горения зеленого сигнала, могут применяться цифровые табло);
        \nЖЕЛТЫЙ СИГНАЛ запрещает движение, кроме случаев, предусмотренных пунктом 6.14 Правил, и предупреждает о предстоящей смене сигналов;
        \nЖЕЛТЫЙ МИГАЮЩИЙ СИГНАЛ разрешает движение и информирует о наличии нерегулируемого перекрестка или пешеходного перехода, предупреждает об опасности;
        \nКРАСНЫЙ СИГНАЛ, в том числе мигающий, запрещает движение.
        \nСочетание красного и желтого сигналов запрещает движение и информирует о предстоящем включении зеленого сигнала.</string>
</resources>