<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inputET"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/outputTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/outputTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/outputTV"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonsLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputET"/>

    <LinearLayout
        android:id="@+id/buttonsLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/pddLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outputTV"
        app:layout_constraintVertical_bias="0"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saveBTN"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/clearBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clearBTN"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pddLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonsLL"
        app:layout_constraintBottom_toTopOf="@id/pddDetailsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/pddTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pddTV"
            android:textSize="20sp"
            android:layout_weight="19"/>

        <CheckBox
            android:id="@+id/pddCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pddDetailsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="400dp"

        app:layout_constraintTop_toBottomOf="@id/pddLL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text=""
        android:textSize="14sp"
        android:layout_weight="19"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>